--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   display: flex;
   justify-content: center;
+  margin-bottom: 84px;
 }
 
 .skip-button {
@@ -17,6 +18,7 @@
   letter-spacing: 0.8px;
   color: #000000;
   margin-right: 26px;
+  font-family: "Work Sans", sans-serif;
 }
 
 .confirm-button {
@@ -33,4 +35,14 @@
   line-height: 1.5;
   letter-spacing: 0.8px;
   color: #ffffff;
+  box-shadow: 0px 10px 10px -5px gray;
+  font-family: "Work Sans", sans-serif;
+}
+
+@media only screen and (max-width: 480px) {
+  .footer {
+    width: 288px;
+    padding-left: 36px;
+    padding-right: 36px;
+  }
 }
