--- a/src/components/sendCompliment/SendCompliment.css
+++ b/src/components/sendCompliment/SendCompliment.css
@@ -17,88 +17,33 @@
   line-height: 1.5;
   letter-spacing: -0.83px;
   color: #000000;
+  font-family: "Work Sans", sans-serif;
 }
 
 .cards {
   display: flex;
   flex-direction: row;
   margin-top: 12px;
+  width: 488px;
+  justify-content: space-between;
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  max-width: 84px;
-  height: 62px;
-  border-radius: 4px;
-  border: solid 2px #2cc6d0;
-  padding: 12px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  margin-right: 12px;
-}
+@media only screen and (max-width: 480px) {
+  .send-compliment {
+    width: auto;
+    padding-left: 36px;
+  }
 
-.card-selected {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  max-width: 84px;
-  height: 62px;
-  border-radius: 4px;
-  border: solid 2px #2cc6d0;
-  padding: 12px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  margin-right: 12px;
-  background-color: #2cc6d0;
-}
+  .cards {
+    width: 324px;
+    overflow: scroll;
+  }
 
-svg {
-  stroke: black;
-  fill: black;
-}
+  .card {
+    margin-right: 12px;
+  }
 
-.icon {
-  width: 30px;
-  height: 36px;
-  fill: #2cc6d0;
-}
-
-.icon-selected {
-  width: 30px;
-  height: 36px;
-  background-color: #ffffff;
-}
-
-.text-content {
-  margin-top: 6px;
-  max-width: 64px;
-  max-height: 24px;
-  font-size: 12px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: -0.83px;
-  text-align: center;
-  color: #2cc6d0;
-}
-
-.text-content-selected {
-  margin-top: 6px;
-  max-width: 64px;
-  max-height: 24px;
-  font-size: 12px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: -0.83px;
-  text-align: center;
-  color: #ffffff;
+  .card-selected {
+    margin-right: 12px;
+  }
 }
