--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -28,6 +28,7 @@
   padding-top: 18px;
   padding-bottom: 18px;
   background-color: #2cc6d0;
+  font-family: "Work Sans", sans-serif;
 }
 
 .icon {
